#     [xdlinux/libxduauth] for Rust.
#     Copyright (C) 2024  learturely <learturely@gmail.com>
#
#     This program is free software: you can redistribute it and/or modify
#     it under the terms of the GNU Affero General Public License as published
#     by the Free Software Foundation, either version 3 of the License, or
#     (at your option) any later version.
#
#     This program is distributed in the hope that it will be useful,
#     but WITHOUT ANY WARRANTY; without even the implied warranty of
#     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#     GNU Affero General Public License for more details.
#
#     You should have received a copy of the GNU Affero General Public License
#     along with this program.  If not, see <https://www.gnu.org/licenses/>.

[package]
name = "x_l4rs"
version = "0.0.1"
edition = "2021"
authors = ["learturely"]
license = "GAPL-3.0"
description = "[xdlinux/libxduauth] for Rust."
readme = "./README.md"
repository = "https://github.com/learturely/x_l4rs"

[features]
default = ["ehall", "ids", "rsbbs"]
cxlib_integrated = ["cxlib_login_integrated", "cxlib_protocol_integrated"]
cxlib_login_integrated = ["cxlib_user", "ids"]
cxlib_protocol_integrated = ["cxlib_protocol", "onceinit"]
ehall = ["ids", "getset"]
ids = ["rand"]
rsbbs = ["hex", "rand", "md5"]

[dependencies]
base64 = "0.22"
cookie_store = "0.21"
cxlib_imageproc = { git = "https://github.com/worksoup/cxlib.git" }
hex = { version = "0.4", optional = true }
image = "0.25"
log = "0.4"
md5 = { version = "0.7", optional = true }
percent-encoding = "2.3"
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
ureq = { version = "2.12", features = ["cookies", "json"] }
cxlib_error = { git = "https://github.com/worksoup/cxlib.git" }
cxlib_user = { git = "https://github.com/worksoup/cxlib.git", optional = true }
cxlib_protocol = { git = "https://github.com/worksoup/cxlib.git", optional = true }
getset = { version = "0.1", optional = true }
onceinit = { version = "0.0.10", optional = true }
rand = { version = "0.8", optional = true }