# MIT License
#
# Copyright (c) 2025 2025  learturely <learturely@gmail.com>
#
# Permission is hereby granted, free of charge, to any person obtaining a copy
# of this software and associated documentation files (the "Software"), to deal
# in the Software without restriction, including without limitation the rights
# to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
# copies of the Software, and to permit persons to whom the Software is
# furnished to do so, subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
# FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
# OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
# SOFTWARE.

[package]
name = "x_l4rs"
version = "0.0.2"
edition = "2024"
authors = ["learturely"]
license = "MIT"
description = "[xdlinux/libxduauth] for Rust."
readme = "./README.md"
repository = "https://github.com/learturely/x_l4rs"

[features]
default = ["ehall", "ids", "rsbbs"]
ehall = ["ids", "getset2", "serde_json"]
ids = ["rand"]
rsbbs = ["hex", "rand", "md5"]

[dependencies]
base64 = "0.22"
getset2 = { version = "0.4", optional = true }
hex = { version = "0.4", optional = true }
image = "0.25"
log = "0.4"
md5 = { version = "0.8", optional = true }
percent-encoding = "2.3"
rand = { version = "0.9", optional = true }
rust-crypto = "0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", optional = true }
thiserror = "2.0"
ureq = { version = "3.0", features = ["cookies", "json"] }